--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ button.doubleWidth {
   justify-content: space-around;
   gap: 2px;
   border-style: solid;
+  border-color: rgb(48, 65, 126);
   padding: 2px;
-  background-color: black;
+  background-color: rgb(48, 65, 126);
   border-radius: 3px;
   font-family: Arial, Helvetica, sans-serif;
   flex-grow: 0;
@@ -40,44 +41,36 @@ body {
 }
 
 #display {
-  border-color: black;
+  border-color: rgb(48, 65, 126);
   border-style: solid;
   height: 80px;
   flex-shrink: 0;
-  background-color: white;
+  background-color: rgb(175, 176, 145);
   font-size: 70px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   gap: 2px;
   flex-grow: 0;
+  padding-right: 6px;
 }
 
 #displayContent {
   margin-right: 4px;
+  font-family: monospace;
 }
 
-.binaryOperator {
-  background-color: orange;
-}
-
-.number {
-  background-color: lightblue;
-}
-
-#equals {
-  background-color: lightgreen;
-}
-
-#AC {
-  background-color: pink;
+.number,
+#decimal {
+  background-color: rgb(244, 243, 245);
+  color: rgb(48, 65, 126);
 }
 
 #negative,
-#percent {
-  background-color: tan;
-}
-
-#decimal {
-  background-color: lightcyan;
+#percent,
+.binaryOperator,
+#AC,
+#equals {
+  background-color: rgb(172, 40, 53);
+  color: rgb(244, 243, 245);
 }
