--- a/style.css
+++ b/style.css
@@ -60,17 +60,22 @@ body {
   font-family: monospace;
 }
 
-.number,
-#decimal {
+.data {
   background-color: rgb(244, 243, 245);
   color: rgb(48, 65, 126);
 }
 
-#negative,
-#percent,
-.binaryOperator,
-#AC,
-#equals {
+.clear,
+.negative,
+.percent,
+.divide,
+.multiply,
+.subtract,
+.add,
+.equals {
   background-color: rgb(172, 40, 53);
   color: rgb(244, 243, 245);
+}
+.highlighted {
+  background-color: darkorange;
 }
